2009-04-16  David Kohen <dudyk at users.sourceforge.net>

	* src/mp3file.c: added taglib support
	* configure.in: added tests and include for TagLib

2009-04-16  Daniele Forsi <dforsi at users.sourceforge.net>

	* data/gtkpod.glade: Fix Gtk-WARNING on GtkSpinButtons

2009-04-12  Todd Zullinger  <tmz@pobox.com>

	* src/mp3file.c: Define a convenient debug macro

	* src/repository.c: Fix entry widget names for Create
	  Repository window.  The names were changed to fix issues
	  caused during the glade file conversion to glade3, in svn
	  revision 2126

2009-03-17  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c:
	  Use LOCALDEBUG in mp3_get_track_*_replaygain().

	  This replaces commented out debug code, making it easier to
	  enable when needed.

	* src/mp3file.c:
	  Fix docs for mp3_get_track_lame_replaygain()

	* src/mp3file.c:
	  Clean up comments in mp3_get_track_ape_replaygain() and
	  remove some useless whitespace.

	* src/mp3file.c:
	  Fix id3_get_string typo (LOCALDEGUB -> LOCALDEBUG)

2009-03-16  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c (mp3_get_track_lame_replaygain):
	  Lame did not store ReplayGain values prior to 3.94b

2009-02-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc.h
	  src/display.h
	  src/sort_window.c
	  src/display_sorttabs.c
	  src/misc.c:
	  Optimation in the sort code -- thanks to javier Kohen for
	  the patches.

2009-02-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_coverart.c
	  src/display_tracks.c
	  src/display_sorttabs.c:
	  Use g_list_prepend instead of g_list_append. Thanks to
	  Javier Kohen for the patches.

2009-02-25 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks: streamline display functions. Thanks to
          Javier Kohen for the patch.

2009-02-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c (tm_data_compare)
	  src/misc_track.c (track_get_text):